# ds-search

./: .babelrc.json  .dockerignore  .env.example  .eslintrc.js  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  stylelint.config.mjs  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: branch-cleanup.yml  cd.yml  deploy-docs.yml  pr.yml  remove-untagged.yml
app/: __init__.py
app/catalogue/: apps.py  views.py
app/ciim/: apps.py  client.py  utils.py
app/deliveryoptions/: api.py  constants.py  delivery_options.json  delivery_options.py  delivery_options_api.py  departments.py  helpers.py  reader_type.py  utils.py
app/errors/: constants.py  middleware.py  views.py
app/lib/: api.py  fields.py  forms.py  pagination.py  utils.py  xslt_transformations.py
app/main/: apps.py  urls.py  views.py
app/records/: api.py  constants.py  converters.py  field_labels.py  labels.py  models.py  urls.py  utils.py  views.py
app/search/: api.py  buckets.py  collection_names.py  constants.py  forms.py  models.py  urls.py  views.py
app/templates/: 404.html  base.html
config/: asgi.py  jinja2.py  urls.py  util.py  versioning.py  wsgi.py
config/settings/: base.py  develop.py  features.py  production.py  sentry.py  staging.py  test.py
docs/: backend.md  contributing.md  dependency-management.md  index.md  local-development-gotchas.md  testing-an-environment.md
docs/backend/: template_variables.md
docs/developer-guide/: backend.md  frontend.md  project-conventions.md
src/scripts/: analytics.js  catalogue-results.js  etna-accordion.mjs  main.js  record-details.js
src/styles/: _search_results.scss  accordion.scss  catalogue-results.scss  font-awesome.scss  landing.scss  main.scss  record-details.scss
test/: utils.py
test/ciim/: factories.py  test_client.py  test_models.py  test_utils.py
test/config/: test_jinja2.py
test/deliveryoptions/: test_api_response_transformation.py  test_delivery_options.py  test_delivery_options_api.py  test_integration.py  test_json_structure.py  test_reader_type.py
test/lib/: test_api.py  test_api_exceptions.py  test_dynamic_multiple_choice_field.py  test_forms_fields.py  test_forms_fields_exceptions.py  test_query_strings.py  test_xslt_transformations.py
test/main/: test_routes.py
test/records/: test_api.py  test_catalogue_record_responses.py  test_id_formats.py  test_models.py  test_records_tags.py  test_related_content.py  test_urls.py  test_utils.py  test_views.py  test_views_exceptions.py
test/search/: test_api.py  (+9 more)
(+141 files in other folders)
